# markers

./: .gitignore  README.md  pyproject.toml
markers/: __init__.py  cli.py  error.py  evaluator.py  expressions.py  lexer.py  main.py  parser.py  tokenizer.py  tokens.py  type.py
tests/: test_cli.py  test_end_to_end.py  test_evaluator.py  test_lexer.py  test_parser.py  test_tokenizer.py  test_version.py
